W-034030: class name got rename. PMD analyzer issue fixed

--- a/force-app/main/default/classes/SLTC_ProductSet_ProposalLineItem.cls
+++ b/force-app/main/default/classes/SLTC_ProductSet_ProposalLineItem.cls
@@ -1,6 +1,6 @@
 /**********************************************************
 *************************************
-Name          : SLTC_TerminatedProducts_List
+Name          : SLTC_ProductSet_ProposalLineItem
 Author        : Sreeharsha L
 Created Date  : 08-04-22
 Last Mod Date : 08-04-22
@@ -10,11 +10,10 @@ Description   : Class is used to overcome the flow limitation to filter and remo
 ***********************************************************
 *************************************/
 
-global class SLTC_TerminatedProducts_List {
+global class SLTC_ProductSet_ProposalLineItem {
     
-    //Method generate unique list of Product for terminated Proposal line items
-    @InvocableMethod(label='Get ProposalLineItem of Cancelled Status' description='Returns the Terminated Products')
-    
+    //Method generate unique list of Product for Proposal 
+    @InvocableMethod(label='List of Products' description='Returns the unique Products')
     global static List<List<Product2>> getProposalLineItem(List<List<Apttus_Proposal__Proposal_Line_Item__c>> proposalLineItems) {
         List<Product2> products = new List<Product2>();
         try{
@@ -35,12 +34,11 @@ global class SLTC_TerminatedProducts_List {
             
         }Catch(Exception exec){
             String message = exec.getTypeName() +':'+exec.getLineNumber() +':message'+ exec.getMessage(); 
-            NI_Error_Logger.WriteToLog(message, ' Apttus_Proposal__Proposal_Line_Item__c', ' SLTC_TerminatedProducts_List', 'Query');   
-            return new List<List<Product2>>();
+            NI_Error_Logger.WriteToLog(message, 'Apttus_Proposal__Proposal_Line_Item__c', 'SLTC_ProductSet_At_ProposalLineItem', 'Query');   
         }
-        List<List<Product2>> terminatedList= new  List<List<Product2>>();
-        terminatedList.add(products);
-        return terminatedList;
+        List<List<Product2>> productList= new  List<List<Product2>>();
+        productList.add(products);
+        return productList;
     }
     
 }
